# simple-http-proxy

./: .gitignore  CLAUDE.md  README.md  ca.crt  ca.key  pyproject.toml
src/simple_http_proxy/: __init__.py  certs.py  cli.py  collector.py  filters.py  server.py
